--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -9,10 +9,17 @@ jobs:
   create_release:
     name: Create Release
     runs-on: ubuntu-latest
+    container:
+      image: node:20
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '20'
 
       - name: Create Release
         id: create_release
