--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -11,6 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: node:20
+      permissions:
+        contents: read
+        /path/to/writeable/directory: write
+        /path/to/another/writeable/directory: write
 
     steps:
       - name: Checkout code
